# ovs-logs

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
docs/: PRD.md  architecture.md  cli_design.md  streamlit_testing.md  streamlit_ui.md
docs/benchmarks/: text_log_parsing.md
src/ovs_logs/: __init__.py
src/ovs_logs/cli/: __init__.py  main.py
src/ovs_logs/config/: __init__.py  settings.py
src/ovs_logs/core/: __init__.py  constants.py  database.py  errors.py  llm.py  normalization.py  persistence.py  report.py  report_schema.py  retry.py  sql_utils.py  text_parsing.py  threat_intel.py  threat_lists.py  timeline.py  validation.py
src/ovs_logs/core/analysis/: __init__.py  engine.py  indicators.py  templates.py
src/ovs_logs/core/ingestion/: __init__.py  adapters.py
src/ovs_logs/services/: __init__.py  analysis_service.py  evtx_workflow.py
src/ovs_logs/ui/: __init__.py  analysis_view.py  app.py  intel_view.py  llm_wiring.py  mitigation_view.py  report_display.py  state.py  timeline_view.py
src/ovs_logs/ui/components/: __init__.py  ingest.py  sidebar.py  upload.py
tests/: __init__.py  conftest.py  test_analysis.py  test_analysis_service.py  test_cli.py  test_database.py  test_errors.py  test_export_rule.py  test_indicators.py  test_ingestion.py  test_llm.py  test_llm_wiring.py  test_normalization.py  test_ollama_provider.py  test_persistence.py  test_report.py  test_report_schema.py  test_retry.py  test_session_state_experiments.py  test_settings.py  test_sql_utils.py  test_text_log_benchmarks.py  test_text_parsing.py  test_text_parsing_integration.py  test_threat_intel.py  test_threat_lists.py  test_timeline.py  test_ui_app.py  test_ui_intel.py  test_ui_mitigation.py  test_ui_timeline.py  test_validation.py
