[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ovs-logs"
version = "0.1.0"
description = "Local AI-powered log tracer and DFIR assistant"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.0.0",
    "typer>=0.12.0",
    "streamlit>=1.35.0",
    "requests>=2.32.0",
    "evtx==0.12.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
ovs-log = "ovs_logs.cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
