[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ovs-logs"
version = "0.1.0"
description = "Local AI-powered log tracer and DFIR assistant"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.0.0",
    "typer>=0.12.0",
    "streamlit>=1.35.0",
    "requests>=2.32.0",
    "evtx==0.12.1",
    "ollama>=0.6.2",
    "pydantic>=2.0",
    "plotly>=5.24.0",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.15.20",
    "pyrefly>=1.1.1",
    "pre-commit>=4.6.0",
    "watchdog==6.0.0",
    "pytz",
]

[project.scripts]
ovs-log = "ovs_logs.cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # pylint
    "TRY", # tryceratops
    "NPY", # numpy-specific
    "RUF", # ruff-specific
]
ignore = [
    "T201",  # print statements (allowed in CLI)
    "T203",  # print statements (allowed in CLI)
    "ARG001", # unused argument (allowed in callbacks)
    "ARG002", # unused argument (allowed in callbacks)
    "B008",  # function calls in default arguments (allowed in some cases)
    "C408",  # unnecessary dict()/list()/tuple() call (allowed for readability)
    "TRY003", # avoid specifying long messages (allowed for clarity)
]
per-file-ignores."tests/*" = ["T201", "T203", "PLR2004"]
per-file-ignores."src/ovs_logs/cli/*" = ["T201", "T203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["ovs_logs"]
combine-as-imports = true

[tool.pyrefly]
project-includes = ["src", "tests"]
search-path = ["src", "tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
